java version: refactoring